[fix] Chart focused point shadow styles support on safari (#1882)
* [fix] Fix focused point outline styles on safari in LineChart

* [fix] Fix focused point outline styles on safari in HighPlot and Scatters

--- a/aim/web/ui/src/components/HighPlot/HighPlot.scss
+++ b/aim/web/ui/src/components/HighPlot/HighPlot.scss
@@ -85,8 +85,10 @@
     /* on click */
     &.focus {
       stroke-width: 2;
-      outline-width: 6px;
       clip-path: unset;
+      &__shadow {
+        stroke-width: 10;
+      }
     }
     /* on hover */
     &.active {
